overlap issue resolved for small screens

--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -261,14 +261,22 @@ img {
 
 @media screen and (max-width: 768px) {
   .header {
-      display: flex;
-      flex-direction: row; /* Maintain flex-direction: row; */
-      justify-content: center; /* Center items horizontally */
-      align-items: center; /* Center items vertically */
+    display: flex;
+    flex-direction: row; /* Maintain flex-direction: row; */
+    justify-content: center; /* Center items horizontally */
+    align-items: center; /* Center items vertically */
   }
-  
+
   .header__logo {
-      margin: 0; /* Reset any margin to ensure proper centering */
+    margin: 0; /* Reset any margin to ensure proper centering */
+  }
+
+  .header__img {
+    margin-right: 1rem; /* Add margin to create space to the right */
+  }
+
+  #current-time-date {
+    margin-left: 1rem; /* Add margin to create space to the left */
   }
 }
 
